Fetching other dataset
### Added

- Added `abbreviations`, `apostrophe`,`emoji`,`emoticons` dataset

### Changed

- Swap columns in emoticons.csv (bug)

--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -507,6 +507,226 @@
     "plt.title(\"Sentiment Data Distribution\")\n",
     "plt.show() "
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "abbreviations_df = pd.read_csv(\"./datasets/abbreviations.csv\")\n",
+    "apostrophe_df = pd.read_csv(\"./datasets/apostrophe.csv\")\n",
+    "emoji_df = pd.read_csv(\"./datasets/emoji.csv\")\n",
+    "emoticons_df = pd.read_csv(\"./datasets/emoticons.csv\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emoji</th>\n",
+       "      <th>emoji_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Awkward\"</td>\n",
+       "      <td>:E</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Alien</td>\n",
+       "      <td>(V)o￥o(V)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Amazed</td>\n",
+       "      <td>!(^^)!</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Amazed</td>\n",
+       "      <td>(*_*)</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Amazed</td>\n",
+       "      <td>(*_*;</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "      emoji emoji_name\n",
+       "0  Awkward\"         :E\n",
+       "1     Alien  (V)o￥o(V)\n",
+       "2    Amazed     !(^^)!\n",
+       "3    Amazed      (*_*)\n",
+       "4    Amazed      (*_*;"
+      ]
+     },
+     "execution_count": 29,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emoticons_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emoji', 'emoji_name']"
+      ]
+     },
+     "execution_count": 31,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = emoticons_df.columns.tolist()\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['emoji_name', 'emoji']"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "cols = cols[-1:] + cols[:-1]\n",
+    "cols"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>emoji_name</th>\n",
+       "      <th>emoji</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>:E</td>\n",
+       "      <td>Awkward\"</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>(V)o￥o(V)</td>\n",
+       "      <td>Alien</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>!(^^)!</td>\n",
+       "      <td>Amazed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>(*_*)</td>\n",
+       "      <td>Amazed</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>(*_*;</td>\n",
+       "      <td>Amazed</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "  emoji_name     emoji\n",
+       "0         :E  Awkward\"\n",
+       "1  (V)o￥o(V)     Alien\n",
+       "2     !(^^)!    Amazed\n",
+       "3      (*_*)    Amazed\n",
+       "4      (*_*;    Amazed"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "emoticons_df = emoticons_df[cols]\n",
+    "emoticons_df.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "emoticons_df.to_csv('./datasets/emoticons.csv', index = False, encoding='utf-8', mode='w')"
+   ]
   }
  ],
  "metadata": {
