--- a/sentiment.ipynb
+++ b/sentiment.ipynb
@@ -81,21 +81,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# import matplotlib.pyplot as plt\n",
-    "# val_count = raw_df.sentiment.value_counts()\n",
-    "\n",
-    "# plt.figure(figsize=(8,8),facecolor='white')\n",
-    "# plt.pie(val_count.values, labels = val_count.index, autopct='%1.1f%%')\n",
-    "# plt.title(\"Sentiment Data Distribution\")\n",
-    "# plt.show() "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "abbreviations_df = pd.read_csv(\"./datasets/abbreviations.csv\")\n",
     "apostrophe_df = pd.read_csv(\"./datasets/apostrophe.csv\")\n",
     "emoji_df = pd.read_csv(\"./datasets/emoji.csv\")\n",
@@ -128,23 +113,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# abbreviations_dict = abbreviations_df.to_dict('dict')\n",
-    "# apostrophe_dict = apostrophe_df.to_dict('dict')\n",
-    "# emoji_dict = emoji_df.to_dict('dict')\n",
-    "# emoticons_dict = emoticons_df.to_dict('dict')\n",
     "abbreviations_dict = dict(abbreviations_df.values)\n",
     "apostrophe_dict = dict(apostrophe_df.values)\n",
     "emoji_dict = dict(emoji_df.values)\n",
     "emoticons_dict = dict(emoticons_df.values)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# raw_df = raw_df.sample(10000)"
    ]
   },
   {
@@ -188,29 +160,28 @@
     "    text = re.sub(\"@[\\w]*\", \"\", text)\n",
     "    # Step C : Remove http & https links\n",
     "    text = re.sub(\"http://\\S+|https://\\S+\", \"\", text)\n",
-    "    # Translation\n",
+    "    # Step D: Translation\n",
     "    if isTranslate:\n",
     "        text = translate(text)\n",
-    "    # Step D : Changing all the tweets into lowercase\n",
+    "    # Step E : Emoticon Lookup\n",
     "    text = lookup_dict(text, emoticons_dict)\n",
-    "    # Step G : Emoticon Lookup\n",
+    "    # Step F : Emoji Lookup\n",
     "    text = lookup_dict(text, emoji_dict)\n",
-    "    # text = text.lower()\n",
+    "    # Step G : Changing all the tweets into lowercase\n",
     "    text = text.lower()\n",
-    "    # Step E : Apostrophe Lookup\n",
+    "    # Step H : Apostrophe Lookup\n",
     "    text = lookup_dict(text, apostrophe_dict)\n",
-    "    # Step F : Short Word Lookup\n",
+    "    # Step I : Short Word Lookup\n",
     "    text = lookup_dict(text, abbreviations_dict)\n",
-    "    # Step G : Emoticon Lookup\n",
-    "    # Step H : Replacing Punctuations with space\n",
+    "    # Step K : Replacing Punctuations with space\n",
     "    text = re.sub(r\"[^\\w\\s]\", \" \", text)\n",
-    "    # Step I : Replacing Special Characters & Numbers (integers) with space\n",
+    "    # Step L : Replacing Special Characters & Numbers (integers) with space\n",
     "    text = re.sub(r\"[^a-zA-Z]\", \" \", text)\n",
-    "    # Step J : Spelling Correction - With TextBlob Library\n",
+    "    # Step M : Spelling Correction - With TextBlob Library\n",
     "    if isSpellCheck:\n",
     "        from textblob import TextBlob\n",
     "        text = str(TextBlob(text).correct())\n",
-    "    # Step K: Remove whitespace\n",
+    "    # Step N: Remove whitespace\n",
     "    text = re.sub(r\"\\s+\", \" \", text)\n",
     "\n",
     "    return text"
@@ -293,109 +264,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# from textblob import TextBlob\n",
-    "# from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "\n",
-    "\n",
-    "# def selectPolarity(tokens):\n",
-    "#     analyzer = SentimentIntensityAnalyzer()\n",
-    "#     negation_words = [\n",
-    "#         \"not\",\n",
-    "#         \"never\",\n",
-    "#         \"neither\",\n",
-    "#         \"nor\",\n",
-    "#         \"barely\",\n",
-    "#         \"hardly\",\n",
-    "#         \"scarcely\",\n",
-    "#         \"seldom\",\n",
-    "#         \"rarely\",\n",
-    "#         \"no\",\n",
-    "#         \"nothing\",\n",
-    "#         \"none\",\n",
-    "#         \"nobody\",\n",
-    "#         \"nowhere\",\n",
-    "#     ]\n",
-    "#     # return [token for token in tokens if (token in negation_words) or (TextBlob(token).sentiment.polarity != 0)]\n",
-    "#     return [\n",
-    "#         token\n",
-    "#         for token in tokens\n",
-    "#         if (token in negation_words)\n",
-    "#         or (\n",
-    "#             analyzer.polarity_scores(token)[\"compound\"] <= -0.5\n",
-    "#             or analyzer.polarity_scores(token)[\"compound\"] >= 0.5\n",
-    "#         )\n",
-    "#     ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# from vaderSentiment.vaderSentiment import SentimentIntensityAnalyzer\n",
-    "\n",
-    "\n",
-    "# def selectPolarity(clear_text):\n",
-    "#     analyzer = SentimentIntensityAnalyzer()\n",
-    "#     # negation_words = [\n",
-    "#     #     \"not\",\n",
-    "#     #     \"never\",\n",
-    "#     #     \"neither\",\n",
-    "#     #     \"nor\",\n",
-    "#     #     \"barely\",\n",
-    "#     #     \"hardly\",\n",
-    "#     #     \"scarcely\",\n",
-    "#     #     \"seldom\",\n",
-    "#     #     \"rarely\",\n",
-    "#     #     \"no\",\n",
-    "#     #     \"nothing\",\n",
-    "#     #     \"none\",\n",
-    "#     #     \"nobody\",\n",
-    "#     #     \"nowhere\",\n",
-    "#     # ]\n",
-    "#     # return [token for token in tokens if (token in negation_words) or (TextBlob(token).sentiment.polarity != 0)]\n",
-    "#     # return [\n",
-    "#         # token\n",
-    "#         # for token in tokens\n",
-    "#         # if (token in negation_words)\n",
-    "#         # or (\n",
-    "#         #     analyzer.polarity_scores(token)[\"compound\"] <= -0.5\n",
-    "#         #     or analyzer.polarity_scores(token)[\"compound\"] >= 0.5\n",
-    "#         # )\n",
-    "#     if analyzer.polarity_scores(clear_text)[\"compound\"] <= 0:\n",
-    "#         return \"neg\"\n",
-    "#     else: \n",
-    "#         return \"pos\"\n",
-    "#     # ]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# raw_df['polarity_tokens'] = raw_df['clear_text'].progress_apply(lambda x: selectPolarity(x))\n",
-    "# raw_df[['clear_text','polarity_tokens']]"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# pd.set_option('display.max_colwidth', None)\n",
-    "# raw_df[['tokens','polarity_tokens']].sample(20)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "def get_wordnet_pos(word):\n",
     "    \"\"\"Map POS tag to first character lemmatize() accepts\"\"\"\n",
     "    import nltk\n",
@@ -446,14 +314,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "# df = raw_df[['lemmats','sentiment']]\n",
-    "# del raw_df\n",
-    "# df"
+    "## Model training"
    ]
   },
   {
@@ -514,71 +378,9 @@
    "source": [
     "from sklearn.feature_extraction.text import TfidfVectorizer\n",
     "\n",
-    "# vectorizer = TfidfVectorizer()\n",
-    "# tfidf_text = vectorizer.fit_transform(X_train)\n",
-    "# tfidf_text"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 97,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "\n",
-    "\n",
-    "nb = Pipeline([('tfidf', TfidfVectorizer()),\n",
-    "               ('clf', MultinomialNB()),\n",
-    "              ])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "nb.fit(X_train,Y_train)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "target_category = df['sentiment'].unique()\n",
-    "target_category"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from sklearn.metrics import accuracy_score\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "test_predict = nb.predict(X_test)\n",
-    "\n",
-    "train_accuracy = round(nb.score(X_train,Y_train)*100)\n",
-    "test_accuracy =round(accuracy_score(test_predict, Y_test)*100)\n",
-    "\n",
-    "\n",
-    "print(f\"Naive Bayes Train Accuracy Score : {train_accuracy}% \")\n",
-    "print(f\"Naive Bayes Test Accuracy Score  : {test_accuracy}% \")\n",
-    "print(classification_report(test_predict, Y_test, target_names=[\"pos\",\"neg\"]))\n",
-    "\n",
-    "cm = confusion_matrix(Y_test, test_predict)\n",
-    "# cm\n",
-    "disp = ConfusionMatrixDisplay(confusion_matrix=cm,display_labels=[\"pos\",\"neg\"])\n",
-    "disp.plot()\n",
-    "plt.show()"
+    "vectorizer = TfidfVectorizer()\n",
+    "tfidf_text = vectorizer.fit_transform(X_train)\n",
+    "tfidf_text"
    ]
   },
   {
@@ -588,6 +390,10 @@
    "outputs": [],
    "source": [
     "from sklearn.pipeline import Pipeline\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn.metrics import confusion_matrix, ConfusionMatrixDisplay\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "def model_result(clf, X_train, Y_train, X_test, Y_test):\n",
     "    print(f\"Clf: {clf}\")\n",
